# TheGeometersToolBoard

./: .gitignore  .yaml  CMakeLists.txt  README.md  main.cpp  my_app  vcpkg.json
build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  my_app  the_board
src/: constants.hpp  drawable.hpp  main.cpp  types.hpp  ui.hpp  utils.hpp
